--- a/gb/24/7/13/n14290118.md
+++ b/gb/24/7/13/n14290118.md
@@ -11,6 +11,7 @@
 <p>“特工护送川普离开，他挥舞着（招牌式）拳头，”消息补充道。</p>
 <p>从现场视频看，在子弹声响起后，川普用右手似乎抚摸头部，随后卧倒在讲台下。特勤局特工匆忙赶到舞台，并将他护送离开。</p>
 <p>事件发生在他登上集会讲台后不久。</p>
+<p>川普授权在众筹网站Go Fund Me为宾州集会的受难者捐款，在开通1小时内凑集到8万美元。</p>
 <p><center><a title="Shots Fired at Trump Rally in Butler, Pennsylvania" src="https://www.ganjingworld.com/embed/1gt526j31t52vHaBSVmhfLdMZ1pn1c" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen" data-mce-fragment="1"></a></center>
 <h2>要点：</h2>
 <p><strong><ahref="#_Toc2024071301">川普：子弹穿透右耳上部 听到嗖嗖的枪声</a></strong><br />
@@ -19,9 +20,11 @@
 <strong><ahref="#_Toc2024071304">警方：枪手在一栋办公楼屋顶上 在安全范围以外</a></strong><br />
 <strong><ahref="#_Toc2024071305">川普竞选团队：期待与民众相聚密尔沃基大会</a></strong></p>
 <p>以下为实时更新。</p>
+<h2>从死亡枪手身上搜出AR-15型半自动步枪</h2>
+<p>《纽约时报》报导，两名美国执法官员称，执法人员从一名已身亡的白人男子身上搜出了一支AR-15型半自动步枪，他们认为该男子就是枪手。</p>
+<p>执法部门消息人士向美国广播公司新闻网（ABC）透露，枪手站在会场旁边的屋顶上，用一支 AR 式步枪发射了多达八发子弹。枪击案发生时，枪手距离会场约200至300码（180米至270米）。</p>
 <h2>警方击毙枪手视频曝光</h2>
 <p>川普遇袭。枪手已被击毙，警方击毙枪手视频也被曝光。</p>
-<p>川普授权在众筹网站Go Fund Me为宾州集会的受难者捐款，在开通1小时内凑集到8万美元。</p>
 <h2><span style="font-size: 16px;">川普团队放出他中弹后的最新视频</span></h2>
 <p>川普总统竞选团队的副通讯主任玛戈·马丁（Margo Martin）在X上放出了川普中弹后露面的最新视频<ahref="https://x.com/margommartin/status/1812345759959760975">点击</a>）。视频显示，川普从飞机上下来，步伐似乎比平时更沉重，并一直扶着把手下来。期间，他抬起左手挥手致意。</p>
 <p>马丁配文说：“坚强而坚韧。他永远不会停止为美国而战。”</p>
@@ -99,7 +102,7 @@
 <p>川普在声明中说：“我感谢美国特勤局、所有执法部门对刚刚在宾州巴特勒枪击事件的迅速反应。最重要的是，我要向在集会中遇难者的家人、以及另一名重伤者的家人表示哀悼。</p>
 <p>“在我们国家发生这样的事情真是难以置信。</p>
 <p>“目前（我们）对枪手的信息一无所知，他已经死亡。我被一颗子弹击中，子弹穿透了我的右耳上部。我立即意识到出了问题，因为我听到了嗖嗖声、枪声，并立即感觉到子弹撕裂皮肤的痛感。我流了很多血，所以我当时就意识到发生了什么。上帝保佑美国！”</p>
-<p dir="ltr" lang="en">Here is the latest information from our investigation. We are grateful to the Secret Service team and our law enforcement partners for their swift action. Our thoughts go out to the families affected by this tragedy. <ahref="https://t.co/E8FazqtUVZ"></a><a href="https://d26llhbq1ka51o.cloudfront.net/S2wpozeZk"><img width="600" src="https://raw.githubusercontent.com/1992513/www/master/t/ntdtv/twitter.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(twitter视频或图片.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a href="E8FazqtUVZ</a></p>
+<p dir="ltr" lang="en">Here is the latest information from our investigation. We are grateful to the Secret Service team and our law enforcement partners for their swift action. Our thoughts go out to the families affected by this tragedy. <ahref="https://t.co/E8FazqtUVZ"></a><a href="https://d35iuueyr80mg8.cloudfront.net/P8wpozeZr"><img width="600" src="https://raw.githubusercontent.com/1992513/www/master/t/ntdtv/twitter.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(twitter视频或图片.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a href="E8FazqtUVZ</a></p>
 <p>— Anthony Guglielmi (@SecretSvcSpox) <ahref="https://twitter.com/SecretSvcSpox/status/1812288378596982908?ref_src=twsrc%5Etfw">July 14, 2024</a></p></blockquote>
 <h2>特勤局声明：枪手被击毙 造成1死3伤</h2>
 <p>美国特勤局通讯主管安东尼·古列尔米（Anthony Guglielmi）在美东时间晚9点发出声明称，枪手被特勤局击毙，造成1死3伤。</p>
@@ -182,7 +185,7 @@
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290194.md#1">川普突遭枪击 目击者：枪手在爬屋顶</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290300.md#1">FBI：枪击事件是针对川普的暗杀未遂案</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/6/29/n10525205.md#1" target="_blank">林辉：中共“志愿军”唯一回国女战俘的遭遇</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/16/3/30/n7475279.md#1" target="_blank">儿子长出新脾脏 医生惊呼不可能</a></li><hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/11/4/n10829782.md#1" target="_blank">许茹：十月逾五十次地震 天象示警情势危</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/16/3/17/n4664320.md#1" target="_blank">她在电话那头喊：感谢法轮功师父救了我！</a></li><hr>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281635.md#1">【未解之谜】“黛玉”再次转世归来？陈晓旭的四世轮回</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/29/n14280210.md#1">苏轼小时和黠鼠交手 他为何输了？</a></li>
